--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
+    "start": "npm run swagger-autogen & nodemon server.js",
+    "swagger-autogen": "node ./src/config/swagger/swagger-autogen.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +18,12 @@
   },
   "dependencies": {
     "express": "^4.17.3",
-    "mongoose": "^6.2.6"
+    "fast-glob": "^3.2.12",
+    "jackson-js": "^1.1.0",
+    "mongoose": "^6.2.6",
+    "swagger-autogen": "^2.23.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
+    "winston": "^3.9.0"
   }
 }
